...
      child: Scaffold(
        appBar: AppBar(
            title: const Text('Cosmetics Shop'),
            bottom: const TabBar(
              isScrollable: true,
              tabs: [
                Tab(text: "Coins"),
                Tab(text: "Pieces"),
                Tab(text: "Boards"),
                Tab(text: "Avatars"),
              ],
            ),
            actions: [
...
